--- a/.github/workflows/sync-external-repo.yml
+++ b/.github/workflows/sync-external-repo.yml
@@ -21,34 +21,21 @@ jobs:
       - name: Checkout this repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          pip install pandas pyarrow requests
-
       - name: Clone external repository
         run: |
           git clone \
-            https://github.com/drawthings/community-models.git \
+            https://github.com/drawthingsai/community-models.git
             external-repo
 
-      - name: Extract data from external repository
-        run: |
-          python scripts/extract_data.py
-
-      - name: Commit and push changes
-        run: |
-          git config --local \
-            user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add -A
-          if ! git diff --staged --quiet; then
-            git commit -m "Update data extracts from external repository"
-            git push
-          else
-            echo "No changes to commit"
-          fi
+      # - name: Commit and push changes
+      #   run: |
+      #     git config --local \
+      #       user.email "github-actions[bot]@users.noreply.github.com"
+      #     git config --local user.name "github-actions[bot]"
+      #     git add -A
+      #     if ! git diff --staged --quiet; then
+      #       git commit -m "Update data extracts from external repository"
+      #       git push
+      #     else
+      #       echo "No changes to commit"
+      #     fi
