progress GH Actions

--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -34,18 +34,25 @@ jobs:
           node-version: 24
 
       - name: Install npm dependencies
-        working-directory: /home/runner/work/drawthings-community-models-extract/app  
         run: |
-          # npm install
           ls
           pwd
 
-      - name: Run node.js app
-        working-directory: /home/runner/work/drawthings-community-models-extract/app
-        run: |
-          # node app.js
-          ls
-          pwd
+
+
+      # - name: Install npm dependencies
+      #   working-directory: /home/runner/work/drawthings-community-models-extract/app  
+      #   run: |
+      #     # npm install
+      #     ls
+      #     pwd
+
+      # - name: Run node.js app
+      #   working-directory: /home/runner/work/drawthings-community-models-extract/app
+      #   run: |
+      #     # node app.js
+      #     ls
+      #     pwd
           
       # - name: Git commit back 2x data files
       #   working-directory: /home/runner/work/drawthings-community-models-extract
