progress GH Actions

--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout this repository
         uses: actions/checkout@v5
-        with:
-          path: main
 
       - name: Clone external repository
         run: |
@@ -34,32 +32,21 @@ jobs:
           node-version: 24
 
       - name: Install npm dependencies
+        working-directory: /home/runner/work/drawthings-community-models-extract/app  
         run: |
+          npm install
+
+      - name: Run node.js app
+        working-directory: /home/runner/work/drawthings-community-models-extract/app
+        run: |
+          # node app.js
           ls
           pwd
-          cd main 
-          ls
-
-
-
-      # - name: Install npm dependencies
-      #   working-directory: /home/runner/work/drawthings-community-models-extract/app  
-      #   run: |
-      #     # npm install
-      #     ls
-      #     pwd
-
-      # - name: Run node.js app
-      #   working-directory: /home/runner/work/drawthings-community-models-extract/app
-      #   run: |
-      #     # node app.js
-      #     ls
-      #     pwd
           
-      # - name: Git commit back 2x data files
-      #   working-directory: /home/runner/work/drawthings-community-models-extract
-      #   run: |
-      #     ls 
-      #     git status
+      - name: Git commit back 2x data files
+        working-directory: /home/runner/work/drawthings-community-models-extract
+        run: |
+          ls 
+          git status
 
 
