--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -32,21 +32,23 @@ jobs:
           node-version: 24
 
       - name: Install npm dependencies
-        working-directory: /home/runner/work/drawthings-community-models-extract/app  
         run: |
-          npm install
-
-      - name: Run node.js app
-        working-directory: /home/runner/work/drawthings-community-models-extract/app
-        run: |
-          # node app.js
+          # npm install
           ls
           pwd
+          ls app
+
+      # - name: Run node.js app
+      #   working-directory: /home/runner/work/drawthings-community-models-extract/app
+      #   run: |
+      #     # node app.js
+      #     ls
+      #     pwd
           
-      - name: Git commit back 2x data files
-        working-directory: /home/runner/work/drawthings-community-models-extract
-        run: |
-          ls 
-          git status
+      # - name: Git commit back 2x data files
+      #   working-directory: /home/runner/work/drawthings-community-models-extract
+      #   run: |
+      #     ls 
+      #     git status
 
 
