--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout this repository
         uses: actions/checkout@v5
+        path: .
 
       - name: Clone external repository
         run: |
