--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -30,23 +30,21 @@ jobs:
           node-version: 24
 
       - name: Install npm dependencies
+        working-directory: /home/runner/work/drawthings-community-models-extract/drawthings-community-models-extract/app
         run: |
-          # npm install
-          ls
           pwd
-          ls app
+          npm install
 
-      # - name: Run node.js app
-      #   working-directory: /home/runner/work/drawthings-community-models-extract/app
-      #   run: |
-      #     # node app.js
-      #     ls
-      #     pwd
+      - name: Run node.js app
+        working-directory: /home/runner/work/drawthings-community-models-extract/drawthings-community-models-extract/app
+        run: |
+          pwd  
+          node app.js        
           
-      # - name: Git commit back 2x data files
-      #   working-directory: /home/runner/work/drawthings-community-models-extract
-      #   run: |
-      #     ls 
-      #     git status
+      - name: Git commit back 2x data files
+        working-directory: /home/runner/work/drawthings-community-models-extract/drawthings-community-models-extract/app
+        run: |
+          ls 
+          git status
 
 
