--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -45,6 +45,8 @@ jobs:
         working-directory: /home/runner/work/drawthings-community-models-extract/drawthings-community-models-extract
         run: |
           ls 
+          git config --global user.email "163229+ianscrivener@users.noreply.github.com "
+          git config --global user.name "Github Actions Bot"
           git add .
           git commit -m "Automated data extract update $(date -u +"%Y-%m-%d %H:%M:%S UTC")" || echo "No changes to commit"
           git push origin main
