--- a/.github/workflows/extract-data.yml
+++ b/.github/workflows/extract-data.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Clone external repository
         run: |
           git clone https://github.com/drawthingsai/community-models.git
-          ls community-models  
+          ls community-models
+          rm community-models.parquet
+          rm community-models.csv
 
       - name: Install node.js
         uses: actions/setup-node@v6
